--- a/project.ipynb
+++ b/project.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c06c5527-062d-43c2-975d-32157bfbd8c0",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
       "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
-      "\u001b[34m•\u001b[39m Learn how to get started at \u001b[32mhttps://www.tidymodels.org/start/\u001b[39m\n",
+      "\u001b[34m•\u001b[39m Search for functions across packages at \u001b[32mhttps://www.tidymodels.org/find/\u001b[39m\n",
       "\n",
       "\u001b[1mRows: \u001b[22m\u001b[34m61069\u001b[39m \u001b[1mColumns: \u001b[22m\u001b[34m21\u001b[39m\n",
       "\u001b[36m──\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m────────────────────────────────────────────────────────\u001b[39m\n",
@@ -185,6 +185,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "635783cc-6e39-48e8-8567-7f590f0184f0",
+   "metadata": {},
+   "source": [
+    "Table 1. The first 6 rows of the \"Secondary Mushroom Data\" dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7816974b-58a7-4793-b9d2-71d728886197",
    "metadata": {},
    "source": [
@@ -193,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "c225b949-cddb-453c-97a5-259aeecc86a9",
    "metadata": {},
    "outputs": [
@@ -207,12 +215,12 @@
        "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>e</td><td> 1.72</td><td> 7.01</td><td> 2.36</td></tr>\n",
        "\t<tr><td>e</td><td> 9.59</td><td> 4.73</td><td>20.49</td></tr>\n",
-       "\t<tr><td>e</td><td> 2.80</td><td> 3.13</td><td> 5.69</td></tr>\n",
-       "\t<tr><td>e</td><td>15.55</td><td>12.36</td><td>19.06</td></tr>\n",
        "\t<tr><td>e</td><td> 5.76</td><td> 8.11</td><td>17.69</td></tr>\n",
        "\t<tr><td>e</td><td>11.53</td><td> 8.99</td><td>18.61</td></tr>\n",
+       "\t<tr><td>e</td><td> 1.48</td><td> 5.39</td><td> 2.56</td></tr>\n",
+       "\t<tr><td>e</td><td>12.59</td><td>12.33</td><td>15.40</td></tr>\n",
+       "\t<tr><td>e</td><td> 1.40</td><td> 5.97</td><td> 1.80</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -222,12 +230,12 @@
        " class & diameter & height & width\\\\\n",
        " <fct> & <dbl> & <dbl> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t e &  1.72 &  7.01 &  2.36\\\\\n",
        "\t e &  9.59 &  4.73 & 20.49\\\\\n",
-       "\t e &  2.80 &  3.13 &  5.69\\\\\n",
-       "\t e & 15.55 & 12.36 & 19.06\\\\\n",
        "\t e &  5.76 &  8.11 & 17.69\\\\\n",
        "\t e & 11.53 &  8.99 & 18.61\\\\\n",
+       "\t e &  1.48 &  5.39 &  2.56\\\\\n",
+       "\t e & 12.59 & 12.33 & 15.40\\\\\n",
+       "\t e &  1.40 &  5.97 &  1.80\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -236,22 +244,22 @@
        "\n",
        "| class &lt;fct&gt; | diameter &lt;dbl&gt; | height &lt;dbl&gt; | width &lt;dbl&gt; |\n",
        "|---|---|---|---|\n",
-       "| e |  1.72 |  7.01 |  2.36 |\n",
        "| e |  9.59 |  4.73 | 20.49 |\n",
-       "| e |  2.80 |  3.13 |  5.69 |\n",
-       "| e | 15.55 | 12.36 | 19.06 |\n",
        "| e |  5.76 |  8.11 | 17.69 |\n",
        "| e | 11.53 |  8.99 | 18.61 |\n",
+       "| e |  1.48 |  5.39 |  2.56 |\n",
+       "| e | 12.59 | 12.33 | 15.40 |\n",
+       "| e |  1.40 |  5.97 |  1.80 |\n",
        "\n"
       ],
       "text/plain": [
        "  class diameter height width\n",
-       "1 e      1.72     7.01   2.36\n",
-       "2 e      9.59     4.73  20.49\n",
-       "3 e      2.80     3.13   5.69\n",
-       "4 e     15.55    12.36  19.06\n",
-       "5 e      5.76     8.11  17.69\n",
-       "6 e     11.53     8.99  18.61"
+       "1 e      9.59     4.73  20.49\n",
+       "2 e      5.76     8.11  17.69\n",
+       "3 e     11.53     8.99  18.61\n",
+       "4 e      1.48     5.39   2.56\n",
+       "5 e     12.59    12.33  15.40\n",
+       "6 e      1.40     5.97   1.80"
       ]
      },
      "metadata": {},
@@ -275,6 +283,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2ea09ad4-0033-4820-b3e9-a6ea28f54113",
+   "metadata": {},
+   "source": [
+    "Table 2. The first 6 rows of a cleaned and wrangled \"Secondary Mushroom Data\" with only diamter, height, and width as variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "62a40eb9-57be-4566-a244-7a47c6be83b5",
    "metadata": {},
    "source": [
@@ -283,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "2695ebae-250f-48ea-817b-708137508cfd",
    "metadata": {},
    "outputs": [
@@ -330,7 +346,30 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "#This table reports the number of observations in each class\n",
+    "summarize_mushroom <- mushroom_training |>\n",
+    "    group_by(class) |>\n",
+    "    summarize(n = n())\n",
+    "summarize_mushroom"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "001abed3-ae4d-4ca5-a0f1-6de304ae82a0",
+   "metadata": {},
+   "source": [
+    "Table 3.1. The number of observations in each class (edible(e)/poisonous(p))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c4c801c3-9a1a-4419-b6aa-725a8ded2dd8",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -341,7 +380,7 @@
        "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>6.736528</td><td>6.579146</td><td>12.15323</td></tr>\n",
+       "\t<tr><td>6.729185</td><td>6.574405</td><td>12.11532</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -351,7 +390,7 @@
        " diameter & height & width\\\\\n",
        " <dbl> & <dbl> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t 6.736528 & 6.579146 & 12.15323\\\\\n",
+       "\t 6.729185 & 6.574405 & 12.11532\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -360,17 +399,40 @@
        "\n",
        "| diameter &lt;dbl&gt; | height &lt;dbl&gt; | width &lt;dbl&gt; |\n",
        "|---|---|---|\n",
-       "| 6.736528 | 6.579146 | 12.15323 |\n",
+       "| 6.729185 | 6.574405 | 12.11532 |\n",
        "\n"
       ],
       "text/plain": [
        "  diameter height   width   \n",
-       "1 6.736528 6.579146 12.15323"
+       "1 6.729185 6.574405 12.11532"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "#This table gives the means of the predictor variables in our analysis\n",
+    "means_mushroom <- mushroom_training |>\n",
+    "    select(-class) |>\n",
+    "    map_df(mean)\n",
+    "    means_mushroom"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bce26bd-dfa4-4f92-81f7-013048899029",
+   "metadata": {},
+   "source": [
+    "Table 3.2. The means of the predictor variables in our analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "0f08ff86-7438-43a8-bbc8-9c2faabe7286",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -391,23 +453,19 @@
     }
    ],
    "source": [
-    "#This table reports the number of observations in each class\n",
-    "summarize_mushroom <- mushroom_training |>\n",
-    "    group_by(class) |>\n",
-    "    summarize(n = n())\n",
-    "summarize_mushroom\n",
-    "\n",
-    "#This table gives the means of the predictor variables in our analysis\n",
-    "means_mushroom <- mushroom_training |>\n",
-    "    select(-class) |>\n",
-    "    map_df(mean)\n",
-    "    means_mushroom\n",
-    "\n",
     "#This calculates the number of rows that have missing data\n",
     "missing_data <- mushroom_training |>\n",
     "    filter(is.na(class) || is.na(diameter) || is.na(height) || is.na(width)) |>\n",
     "    nrow()\n",
     "missing_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff610938-bdc5-43e6-8482-7d53aa8f41d3",
+   "metadata": {},
+   "source": [
+    "Therefore, 0 rows in the dataset have missing data."
    ]
   },
   {
