--- a/project.ipynb
+++ b/project.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c06c5527-062d-43c2-975d-32157bfbd8c0",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
       "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
-      "\u001b[34m•\u001b[39m Use suppressPackageStartupMessages() to eliminate package startup messages\n",
+      "\u001b[34m•\u001b[39m Search for functions across packages at \u001b[32mhttps://www.tidymodels.org/find/\u001b[39m\n",
       "\n",
       "\u001b[1mRows: \u001b[22m\u001b[34m61069\u001b[39m \u001b[1mColumns: \u001b[22m\u001b[34m21\u001b[39m\n",
       "\u001b[36m──\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m────────────────────────────────────────────────────────\u001b[39m\n",
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c225b949-cddb-453c-97a5-259aeecc86a9",
    "metadata": {},
    "outputs": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "2695ebae-250f-48ea-817b-708137508cfd",
    "metadata": {},
    "outputs": [
@@ -307,41 +307,41 @@
      "data": {
       "text/html": [
        "<table class=\"dataframe\">\n",
-       "<caption>A tibble: 2 × 3</caption>\n",
+       "<caption>A tibble: 2 × 2</caption>\n",
        "<thead>\n",
-       "\t<tr><th scope=col>class</th><th scope=col>n</th><th scope=col>proportion</th></tr>\n",
-       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "\t<tr><th scope=col>class</th><th scope=col>n</th></tr>\n",
+       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>e</td><td>20385</td><td>0.4450776</td></tr>\n",
-       "\t<tr><td>p</td><td>25416</td><td>0.5549224</td></tr>\n",
+       "\t<tr><td>e</td><td>20385</td></tr>\n",
+       "\t<tr><td>p</td><td>25416</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
-       "A tibble: 2 × 3\n",
-       "\\begin{tabular}{lll}\n",
-       " class & n & proportion\\\\\n",
-       " <fct> & <int> & <dbl>\\\\\n",
+       "A tibble: 2 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " class & n\\\\\n",
+       " <fct> & <int>\\\\\n",
        "\\hline\n",
-       "\t e & 20385 & 0.4450776\\\\\n",
-       "\t p & 25416 & 0.5549224\\\\\n",
+       "\t e & 20385\\\\\n",
+       "\t p & 25416\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "A tibble: 2 × 3\n",
+       "A tibble: 2 × 2\n",
        "\n",
-       "| class &lt;fct&gt; | n &lt;int&gt; | proportion &lt;dbl&gt; |\n",
-       "|---|---|---|\n",
-       "| e | 20385 | 0.4450776 |\n",
-       "| p | 25416 | 0.5549224 |\n",
+       "| class &lt;fct&gt; | n &lt;int&gt; |\n",
+       "|---|---|\n",
+       "| e | 20385 |\n",
+       "| p | 25416 |\n",
        "\n"
       ],
       "text/plain": [
-       "  class n     proportion\n",
-       "1 e     20385 0.4450776 \n",
-       "2 p     25416 0.5549224 "
+       "  class n    \n",
+       "1 e     20385\n",
+       "2 p     25416"
       ]
      },
      "metadata": {},
@@ -352,8 +352,7 @@
     "#This table reports the number of observations in each class\n",
     "summarize_mushroom <- mushroom_training |>\n",
     "    group_by(class) |>\n",
-    "    summarize(n = n(),\n",
-    "             proportion = n/nrow(mushroom_training))\n",
+    "    summarize(n = n())\n",
     "summarize_mushroom"
    ]
   },
@@ -585,7 +584,7 @@
    "id": "0c4064e9-3e67-4b72-aec8-2fa998c2d5bf",
    "metadata": {},
    "source": [
-    "From the scatterplot, we can see that the dimensions of poison and edible mushrooms follow simlar trends. However, there are also many large outlier clusters that entirely consist of one class, which also shows in the spread of the marginal density plots. For example, in the marginal density plot regarding the width variable, the density distribution for posinous mushroom has a larger mean and variance, indicating that a greater proportion of poison mushrooms has greater stem width than that of the edible ones."
+    "Figure 1.1, 1.2, and 1.3 shows the sets of relationship between 2 of the predictive variables in terms of the mushroom's edibility. We can see that the majority dimensions of poisonous and edible mushrooms follow similar trends. However, there are also many large outlier clusters that entirely consist of one class. This is also shown in the spread of the marginal density plots (Figure 2.1, 2.2, 2.3). For example, in the marginal density plot regarding the width variable (Figure 2.2), the density distribution for poisinous mushroom has a larger mean and variance, indicating that a greater proportion of poisonous mushrooms has greater stem width than that of the edible ones."
    ]
   },
   {
@@ -684,9 +683,12 @@
    "metadata": {},
    "source": [
     "# Discussion\n",
+    "summarize what you found\n",
+    "- discuss whether this is what you expected to find?\n",
+    "- √ discuss what impact could such findings have?\n",
+    "- √ discuss what future questions could this lead to?\n",
     "\n",
     "#### - Finding:\n",
-    "We expected our model to do better than the majority classifier - just picking the most common label, and our model achieved this. From the summary of our dataset, the most common label is poison mushrooms (proportion of poison mushrooms = 0.55 versus proportion of edible mushrooms = 0.45). If we assign every mushroom the label of \"poison,\" then the accuracy would be around 55%. Our model improved the prediction quite a bit on the majority classifier, given that the accuracy raises to roughly 80%. \n",
     "\n",
     "#### - Impact:\n",
     "\n",
