--- a/project.ipynb
+++ b/project.ipynb
@@ -28,7 +28,7 @@
     "- √ wrangles and cleans the data from it's original (downloaded) format to the format necessary for the planned analysis\n",
     "- √ performs a summary of the data set that is relevant for exploratory data analysis related to the planned analysis \n",
     "- √ creates a visualization of the dataset that is relevant for exploratory data analysis related to the planned analysis\n",
-    "- performs the data analysis\n",
+    "- performs the data analysis (choosing k)\n",
     "- creates a visualization of the analysis \n",
     "\n",
     "- !! note: all tables and figure should have a figure/table number and a legend"
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "c225b949-cddb-453c-97a5-259aeecc86a9",
    "metadata": {},
    "outputs": [
@@ -218,12 +218,12 @@
        "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
+       "\t<tr><td>e</td><td> 1.72</td><td> 7.01</td><td> 2.36</td></tr>\n",
        "\t<tr><td>e</td><td> 9.59</td><td> 4.73</td><td>20.49</td></tr>\n",
+       "\t<tr><td>e</td><td> 2.80</td><td> 3.13</td><td> 5.69</td></tr>\n",
+       "\t<tr><td>e</td><td>15.55</td><td>12.36</td><td>19.06</td></tr>\n",
        "\t<tr><td>e</td><td> 5.76</td><td> 8.11</td><td>17.69</td></tr>\n",
        "\t<tr><td>e</td><td>11.53</td><td> 8.99</td><td>18.61</td></tr>\n",
-       "\t<tr><td>e</td><td> 1.48</td><td> 5.39</td><td> 2.56</td></tr>\n",
-       "\t<tr><td>e</td><td>12.59</td><td>12.33</td><td>15.40</td></tr>\n",
-       "\t<tr><td>e</td><td> 1.40</td><td> 5.97</td><td> 1.80</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -233,12 +233,12 @@
        " class & diameter & height & width\\\\\n",
        " <fct> & <dbl> & <dbl> & <dbl>\\\\\n",
        "\\hline\n",
+       "\t e &  1.72 &  7.01 &  2.36\\\\\n",
        "\t e &  9.59 &  4.73 & 20.49\\\\\n",
+       "\t e &  2.80 &  3.13 &  5.69\\\\\n",
+       "\t e & 15.55 & 12.36 & 19.06\\\\\n",
        "\t e &  5.76 &  8.11 & 17.69\\\\\n",
        "\t e & 11.53 &  8.99 & 18.61\\\\\n",
-       "\t e &  1.48 &  5.39 &  2.56\\\\\n",
-       "\t e & 12.59 & 12.33 & 15.40\\\\\n",
-       "\t e &  1.40 &  5.97 &  1.80\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -247,22 +247,22 @@
        "\n",
        "| class &lt;fct&gt; | diameter &lt;dbl&gt; | height &lt;dbl&gt; | width &lt;dbl&gt; |\n",
        "|---|---|---|---|\n",
+       "| e |  1.72 |  7.01 |  2.36 |\n",
        "| e |  9.59 |  4.73 | 20.49 |\n",
+       "| e |  2.80 |  3.13 |  5.69 |\n",
+       "| e | 15.55 | 12.36 | 19.06 |\n",
        "| e |  5.76 |  8.11 | 17.69 |\n",
        "| e | 11.53 |  8.99 | 18.61 |\n",
-       "| e |  1.48 |  5.39 |  2.56 |\n",
-       "| e | 12.59 | 12.33 | 15.40 |\n",
-       "| e |  1.40 |  5.97 |  1.80 |\n",
        "\n"
       ],
       "text/plain": [
        "  class diameter height width\n",
-       "1 e      9.59     4.73  20.49\n",
-       "2 e      5.76     8.11  17.69\n",
-       "3 e     11.53     8.99  18.61\n",
-       "4 e      1.48     5.39   2.56\n",
-       "5 e     12.59    12.33  15.40\n",
-       "6 e      1.40     5.97   1.80"
+       "1 e      1.72     7.01   2.36\n",
+       "2 e      9.59     4.73  20.49\n",
+       "3 e      2.80     3.13   5.69\n",
+       "4 e     15.55    12.36  19.06\n",
+       "5 e      5.76     8.11  17.69\n",
+       "6 e     11.53     8.99  18.61"
       ]
      },
      "metadata": {},
@@ -275,13 +275,19 @@
     "new_colnames[10] <- 'height'\n",
     "new_colnames[11] <- 'width'\n",
     "colnames(mushrooms) <- new_colnames\n",
+    "                    \n",
     "mushroom_split <- mushrooms |>\n",
     "    mutate(across(-c(diameter, height, width), factor)) |>\n",
     "    initial_split(prop=0.75, strata=class)\n",
+    "                    \n",
     "mushroom_training_raw <- training(mushroom_split)\n",
     "mushroom_training <- mushroom_training_raw |>\n",
     "    select(class, diameter, height, width)\n",
-    "head(mushroom_training)"
+    "head(mushroom_training)\n",
+    "                    \n",
+    "mushroom_testing_raw <- testing(mushroom_split)\n",
+    "mushroom_testing <- mushroom_testing_raw |>\n",
+    "                    select(class, diameter, height, width)"
    ]
   },
   {
@@ -612,8 +618,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "0c049b02-d10b-44ae-8777-ec83295e149d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k <- 10\n",
+    "\n",
+    "mushroom_recipe <- recipe(class ~ diameter + height + width, data=mushroom_training) |>\n",
+    "    step_scale(all_predictors()) |>\n",
+    "    step_center(all_predictors())\n",
+    "\n",
+    "mushroom_spec <- nearest_neighbor(weight_func=\"rectangular\", neighbors=k) |>\n",
+    "    set_engine(\"kknn\") |>\n",
+    "    set_mode(\"classification\")\n",
+    "\n",
+    "mushroom_fit <- workflow() |>\n",
+    "    add_recipe(mushroom_recipe) |>\n",
+    "    add_model(mushroom_spec) |>\n",
+    "    fit(data = mushroom_training)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2b6c6773-64e8-4126-8711-a96f516f4282",
    "metadata": {},
    "outputs": [
     {
@@ -626,8 +655,8 @@
        "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>accuracy</td><td>binary</td><td>0.8375800</td></tr>\n",
-       "\t<tr><td>kap     </td><td>binary</td><td>0.6710696</td></tr>\n",
+       "\t<tr><td>accuracy</td><td>binary</td><td>0.8335189</td></tr>\n",
+       "\t<tr><td>kap     </td><td>binary</td><td>0.6628845</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -637,8 +666,8 @@
        " .metric & .estimator & .estimate\\\\\n",
        " <chr> & <chr> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t accuracy & binary & 0.8375800\\\\\n",
-       "\t kap      & binary & 0.6710696\\\\\n",
+       "\t accuracy & binary & 0.8335189\\\\\n",
+       "\t kap      & binary & 0.6628845\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -647,14 +676,14 @@
        "\n",
        "| .metric &lt;chr&gt; | .estimator &lt;chr&gt; | .estimate &lt;dbl&gt; |\n",
        "|---|---|---|\n",
-       "| accuracy | binary | 0.8375800 |\n",
-       "| kap      | binary | 0.6710696 |\n",
+       "| accuracy | binary | 0.8335189 |\n",
+       "| kap      | binary | 0.6628845 |\n",
        "\n"
       ],
       "text/plain": [
        "  .metric  .estimator .estimate\n",
-       "1 accuracy binary     0.8375800\n",
-       "2 kap      binary     0.6710696"
+       "1 accuracy binary     0.8335189\n",
+       "2 kap      binary     0.6628845"
       ]
      },
      "metadata": {},
@@ -662,23 +691,102 @@
     }
    ],
    "source": [
-    "k <- 10\n",
-    "mushroom_recipe <- recipe(class ~ diameter + height + width, data=mushroom_training) |>\n",
-    "    step_scale(all_predictors()) |>\n",
-    "    step_center(all_predictors())\n",
-    "mushroom_spec <- nearest_neighbor(weight_func=\"rectangular\", neighbors=k) |>\n",
-    "    set_engine(\"kknn\") |>\n",
-    "    set_mode(\"classification\")\n",
-    "mushroom_fit <- workflow() |>\n",
-    "    add_recipe(mushroom_recipe) |>\n",
-    "    add_model(mushroom_spec) |>\n",
-    "    fit(data = mushroom_training)\n",
+    "# accuracy of the training set\n",
     "mushroom_predicted <- mushroom_fit |>\n",
     "    predict(mushroom_training) |>\n",
     "    bind_cols(mushroom_training)\n",
+    "\n",
     "training_metrics <- mushroom_predicted |>\n",
     "    metrics(truth=class, estimate=.pred_class)\n",
     "training_metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "26a1588c-ac35-40b6-9c40-3c0934916e32",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 2 × 3</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>.metric</th><th scope=col>.estimator</th><th scope=col>.estimate</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>accuracy</td><td>binary</td><td>0.8268928</td></tr>\n",
+       "\t<tr><td>kap     </td><td>binary</td><td>0.6494354</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 2 × 3\n",
+       "\\begin{tabular}{lll}\n",
+       " .metric & .estimator & .estimate\\\\\n",
+       " <chr> & <chr> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t accuracy & binary & 0.8268928\\\\\n",
+       "\t kap      & binary & 0.6494354\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 2 × 3\n",
+       "\n",
+       "| .metric &lt;chr&gt; | .estimator &lt;chr&gt; | .estimate &lt;dbl&gt; |\n",
+       "|---|---|---|\n",
+       "| accuracy | binary | 0.8268928 |\n",
+       "| kap      | binary | 0.6494354 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  .metric  .estimator .estimate\n",
+       "1 accuracy binary     0.8268928\n",
+       "2 kap      binary     0.6494354"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# accuracy of the testing set\n",
+    "mushroom_predictions <- mushroom_fit |>\n",
+    "    predict(mushroom_testing) |>\n",
+    "    bind_cols(mushroom_testing)\n",
+    "\n",
+    "testing_metrics <- mushroom_predictions |>\n",
+    "    metrics(truth=class, estimate=.pred_class)\n",
+    "testing_metrics\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "b41e599c-a790-4fbe-a9f8-cf0a47145f9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "          Truth\n",
+       "Prediction    e    p\n",
+       "         e 5462 1309\n",
+       "         p 1334 7163"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Confusion Matrix\n",
+    "mushroom_mat <- mushroom_predictions |>\n",
+    "    conf_mat(truth = class, estimate = .pred_class)\n",
+    "mushroom_mat"
    ]
   },
   {
